# ouster_pedestrian_detector

./: README.md  Requirements.txt  package.xml  requirements.txt  setup.cfg  setup.py
.docker/: Dockerfile  setup.py
launch/: detector.launch.py  detector_with_foxglow.py  with_foxglow.py
ouster_pedestrian_detector/: DetectorClass.py  Tracker.py  detector.py  detector_class.py  package.xml  setup.cfg  setup.py  tracker.py
ouster_pedestrian_detector/ouster_pedestrian_detector/: detector.py  detector_node.py
