<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pedestrian_detector</name>
  <version>0.0.0</version>
  <description>Visual pedestrian detection by LIDAR</description>
  <maintainer email="rusiklaim@gmail.com">RBabakyan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <!-- Если вы используете Ultraytics YOLO, убедитесь, что у вас установлен этот пакет. -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
